fixing spacing issue

--- a/wp-content/themes/makerfaire/less/panels.less
+++ b/wp-content/themes/makerfaire/less/panels.less
@@ -323,7 +323,19 @@
          height: 304px;
       }
    }
-   .featured-maker-panel.white-back {
+   .featured-panel {
+      .more-makers-link {
+         color: #fff;
+         border: thin solid white;
+         padding: 10px 30px;
+         margin-top: 40px;
+         &:hover {
+            color: #00597E;
+            background-color: #fff; 
+         }
+      }
+   }
+   .white-back {
       background-color: #fff;
       .title-w-border-y, .more-makers-link {
          color: #4A4A4A;
